Feature : Forgot Password

--- a/templates/frontend/forgot-password.html
+++ b/templates/frontend/forgot-password.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-xxl-6 col-xl-5 col-lg-6 d-lg-block d-none ms-auto">
                     <div class="image-contain">
-                        <img src="../assets/images/inner-page/forgot.png" class="img-fluid" alt="">
+                        <img src="{% static 'frontend/assets/images/inner-page/forgot.png' %}" class="img-fluid" alt="">
                     </div>
                 </div>
 
@@ -19,11 +19,11 @@
                     <div class="d-flex align-items-center justify-content-center h-100">
                         <div class="log-in-box">
                             <div class="log-in-title">
-                                <h3>Welcome To Fastkart</h3>
-                                <h4>Forgot your password</h4>
+                                <h3>Welcome To Oyabuynow</h3>
+                                <h4>Forgot your password?</h4>
                             </div>
 
-                            <div class="input-box">
+                            <div class="input-box mt-5">
                                 <form class="row g-4" method="POST">
                                     {% csrf_token %}
                                     <div class="col-12">
@@ -38,6 +38,14 @@
                                         <button class="btn btn-animation w-100" type="submit">Forgot
                                             Password</button>
                                     </div>
+
+                                    <div class="col-12">
+                                        <div class="forgot-box">
+
+                                            <a href="{% url 'login' %}" class="forgot-password">Go back to Login?</a>
+                                        </div>
+                                    </div>
+
                                 </form>
                             </div>
                         </div>
