--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -19,7 +19,7 @@
                 <div class="col-xl-8 ratio_65">
                     <div class="home-contain h-100">
                         <div class="h-100">
-                            <img src="{% static 'frontend/assets/images/vegetable/banner/1.jpg' %}" class="bg-img blur-up lazyload" alt="">
+                            <img src="{% static 'frontend/assets/images/banners/clothes.jpg' %}" class="bg-img blur-up lazyload" alt="">
                         </div>
                         <div class="home-detail p-center-left w-75">
                             <div>
@@ -39,7 +39,7 @@
                     <div class="row g-4">
                         <div class="col-xl-12 col-md-6">
                             <div class="home-contain">
-                                <img src="{% static 'frontend/assets/images/vegetable/banner/2.jpg' %}" class="bg-img blur-up lazyload"
+                                <img src="{% static 'frontend/assets/images/banners/appliances.jpg' %}" class="bg-img blur-up lazyload"
                                     alt="">
                                 <div class="home-detail p-center-left home-p-sm w-75">
                                     <div>
@@ -56,7 +56,7 @@
 
                         <div class="col-xl-12 col-md-6">
                             <div class="home-contain">
-                                <img src="{% static 'frontend/assets/images/vegetable/banner/3.jpg' %}" class="bg-img blur-up lazyload"
+                                <img src="{% static 'frontend/assets/images/banners/jewelry.jpg' %}" class="bg-img blur-up lazyload"
                                     alt="">
                                 <div class="home-detail p-center-left home-p-sm w-75">
                                     <div>
@@ -77,71 +77,71 @@
     <!-- Home Section End -->
 
     <!-- Banner Section Start -->
-    <section class="banner-section ratio_60 wow fadeInUp">
-        <div class="container-fluid-lg">
-            <div class="banner-slider">
-                <div>
-                    <div class="banner-contain hover-effect">
-                        <img src="{% static 'frontend/assets/images/vegetable/banner/4.jpg' %}" class="bg-img blur-up lazyload" alt="">
-                        <div class="banner-details">
-                            <div class="banner-box">
-                                <h6 class="text-danger">5% OFF</h6>
-                                <h5>Hot Deals on New Items</h5>
-                                <h6 class="text-content">Daily Essentials Eggs & Dairy</h6>
-                            </div>
-                            <a href="shop-left-sidebar.html" class="banner-button text-white">Shop Now <i
-                                    class="fa-solid fa-right-long ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
+<!--    <section class="banner-section ratio_60 wow fadeInUp">-->
+<!--        <div class="container-fluid-lg">-->
+<!--            <div class="banner-slider">-->
+<!--                <div>-->
+<!--                    <div class="banner-contain hover-effect">-->
+<!--                        <img src="{% static 'frontend/assets/images/vegetable/banner/4.jpg' %}" class="bg-img blur-up lazyload" alt="">-->
+<!--                        <div class="banner-details">-->
+<!--                            <div class="banner-box">-->
+<!--                                <h6 class="text-danger">5% OFF</h6>-->
+<!--                                <h5>Hot Deals on New Items</h5>-->
+<!--                                <h6 class="text-content">Daily Essentials Eggs & Dairy</h6>-->
+<!--                            </div>-->
+<!--                            <a href="{% url 'shop' %}" class="banner-button text-white">Shop Now <i-->
+<!--                                    class="fa-solid fa-right-long ms-2"></i></a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <div>
-                    <div class="banner-contain hover-effect">
-                        <img src="{% static 'frontend/assets/images/vegetable/banner/5.jpg' %}" class="bg-img blur-up lazyload" alt="">
-                        <div class="banner-details">
-                            <div class="banner-box">
-                                <h6 class="text-danger">5% OFF</h6>
-                                <h5>Buy More & Save More</h5>
-                                <h6 class="text-content">Fresh Vegetables</h6>
-                            </div>
-                            <a href="shop-left-sidebar.html" class="banner-button text-white">Shop Now <i
-                                    class="fa-solid fa-right-long ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
+<!--                <div>-->
+<!--                    <div class="banner-contain hover-effect">-->
+<!--                        <img src="{% static 'frontend/assets/images/vegetable/banner/5.jpg' %}" class="bg-img blur-up lazyload" alt="">-->
+<!--                        <div class="banner-details">-->
+<!--                            <div class="banner-box">-->
+<!--                                <h6 class="text-danger">5% OFF</h6>-->
+<!--                                <h5>Buy More & Save More</h5>-->
+<!--                                <h6 class="text-content">Fresh Vegetables</h6>-->
+<!--                            </div>-->
+<!--                            <a href="{% url 'shop' %}" class="banner-button text-white">Shop Now <i-->
+<!--                                    class="fa-solid fa-right-long ms-2"></i></a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <div>
-                    <div class="banner-contain hover-effect">
-                        <img src="{% static 'frontend/assets/images/vegetable/banner/6.jpg' %}" class="bg-img blur-up lazyload" alt="">
-                        <div class="banner-details">
-                            <div class="banner-box">
-                                <h6 class="text-danger">5% OFF</h6>
-                                <h5>Organic Meat Prepared</h5>
-                                <h6 class="text-content">Delivered to Your Home</h6>
-                            </div>
-                            <a href="shop-left-sidebar.html" class="banner-button text-white">Shop Now <i
-                                    class="fa-solid fa-right-long ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
+<!--                <div>-->
+<!--                    <div class="banner-contain hover-effect">-->
+<!--                        <img src="{% static 'frontend/assets/images/vegetable/banner/6.jpg' %}" class="bg-img blur-up lazyload" alt="">-->
+<!--                        <div class="banner-details">-->
+<!--                            <div class="banner-box">-->
+<!--                                <h6 class="text-danger">5% OFF</h6>-->
+<!--                                <h5>Organic Meat Prepared</h5>-->
+<!--                                <h6 class="text-content">Delivered to Your Home</h6>-->
+<!--                            </div>-->
+<!--                            <a href="{% url 'shop' %}" class="banner-button text-white">Shop Now <i-->
+<!--                                    class="fa-solid fa-right-long ms-2"></i></a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <div>
-                    <div class="banner-contain hover-effect">
-                        <img src="{% static 'frontend/assets/images/vegetable/banner/7.jpg' %}" class="bg-img blur-up lazyload" alt="">
-                        <div class="banner-details">
-                            <div class="banner-box">
-                                <h6 class="text-danger">5% OFF</h6>
-                                <h5>Buy More & Save More</h5>
-                                <h6 class="text-content">Nuts & Snacks</h6>
-                            </div>
-                            <a href="shop-left-sidebar.html" class="banner-button text-white">Shop Now <i
-                                    class="fa-solid fa-right-long ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--                <div>-->
+<!--                    <div class="banner-contain hover-effect">-->
+<!--                        <img src="{% static 'frontend/assets/images/vegetable/banner/7.jpg' %}" class="bg-img blur-up lazyload" alt="">-->
+<!--                        <div class="banner-details">-->
+<!--                            <div class="banner-box">-->
+<!--                                <h6 class="text-danger">5% OFF</h6>-->
+<!--                                <h5>Buy More & Save More</h5>-->
+<!--                                <h6 class="text-content">Nuts & Snacks</h6>-->
+<!--                            </div>-->
+<!--                            <a href="{% url 'shop' %}" class="banner-button text-white">Shop Now <i-->
+<!--                                    class="fa-solid fa-right-long ms-2"></i></a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!-- Banner Section End -->
 
 
@@ -196,7 +196,7 @@
 
                         <div class="ratio_156 section-t-space">
                             <div class="home-contain hover-effect">
-                                <img src="{% static 'frontend/assets/images/vegetable/banner/8.jpg' %}" class="bg-img blur-up lazyload"
+                                <img src="{% static 'frontend/assets/images/banners/phones.jpg' %}" class="bg-img blur-up lazyload"
                                     alt="">
                                 <div class="home-detail p-top-left home-p-medium">
                                     <div>
@@ -383,13 +383,13 @@
                         <div class="row g-md-4 g-3">
                             <div class="col-md-6">
                                 <div class="banner-contain hover-effect">
-                                    <img src="{% static 'frontend/assets/images/vegetable/banner/9.jpg' %}" class="bg-img blur-up lazyload"
+                                    <img src="{% static 'frontend/assets/images/banners/laptops.jpg' %}" class="bg-img blur-up lazyload"
                                         alt="">
                                     <div class="banner-details p-center-left p-4">
                                         <div>
                                             <h3 class="text-exo">50% offer</h3>
-                                            <h4 class="text-russo fw-normal theme-color mb-2">Testy Mushrooms</h4>
-                                            <button onclick="location.href = 'shop-left-sidebar.html';"
+                                            <h4 class="text-russo fw-normal theme-color mb-2">On Laptops</h4>
+                                            <button onclick="location.href = '{% url 'shop' %}';"
                                                 class="btn btn-animation btn-sm mend-auto">Shop Now <i
                                                     class="fa-solid fa-arrow-right icon"></i></button>
                                         </div>
@@ -404,7 +404,7 @@
                                         <div>
                                             <h3 class="text-exo">50% offer</h3>
                                             <h4 class="text-russo fw-normal theme-color mb-2">Fresh MEAT</h4>
-                                            <button onclick="location.href = 'shop-left-sidebar.html';"
+                                            <button onclick="location.href = '{% url 'shop' %}';"
                                                 class="btn btn-animation btn-sm mend-auto">Shop Now <i
                                                     class="fa-solid fa-arrow-right icon"></i></button>
                                         </div>
@@ -440,7 +440,7 @@
                                             <h3 class="mt-2 mb-3">TAKE ON THE DAY!</h3>
                                             <p class="text-content banner-text">In publishing and graphic design, Lorem
                                                 ipsum is a placeholder text commonly used to demonstrate.</p>
-                                            <button onclick="location.href = 'shop-left-sidebar.html';"
+                                            <button onclick="location.href = '{% url 'shop' %}';"
                                                 class="btn btn-animation btn-sm mend-auto">Shop Now <i
                                                     class="fa-solid fa-arrow-right icon"></i></button>
                                         </div>
@@ -449,7 +449,7 @@
                             </div>
 
                             <div class="col-xxl-4 col-xl-12 col-md-5">
-                                <a href="shop-left-sidebar.html" class="banner-contain hover-effect h-100">
+                                <a href="{% url 'shop' %}" class="banner-contain hover-effect h-100">
                                     <img src="{% static 'frontend/assets/images/vegetable/banner/13.jpg' %}" class="bg-img blur-up lazyload"
                                         alt="">
                                     <div class="banner-details p-center-left p-4 h-100">
@@ -540,7 +540,7 @@
                                     <h6 class="ls-expanded theme-color mb-sm-3 mb-1">SUMMER</h6>
                                     <h2 class="banner-title">VEGETABLE</h2>
                                     <h5 class="lh-sm mx-auto mt-1 text-content">Save up to 5% OFF</h5>
-                                    <button onclick="location.href = 'shop-left-sidebar.html';"
+                                    <button onclick="location.href = '{% url 'shop' %}';"
                                         class="btn btn-animation btn-sm mx-auto mt-sm-3 mt-2">Shop Now <i
                                             class="fa-solid fa-arrow-right icon"></i></button>
                                 </div>
