--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -24,8 +24,7 @@
                         <div class="home-detail p-center-left w-75">
                             <div>
                                 <h6>Exclusive offer <span>30% Off</span></h6>
-                                <h1 class="text-uppercase">Stay home & delivered your <span class="daily">Daily
-                                        Trends</span></h1>
+                                <h1 class="text-uppercase">Stay home & get your orders delivered to your <span class="daily">Doorstep</span></h1>
                                 <p class="w-75 d-none d-sm-block">Best comfy wears to match your style. </p>
                                 <button onclick="location.href = '{% url 'shop' %}';"
                                     class="btn btn-animation mt-xxl-4 mt-2 home-button mend-auto">Shop Now <i
@@ -214,14 +213,13 @@
 
                         <div class="ratio_medium section-t-space">
                             <div class="home-contain hover-effect">
-                                <img src="{% static 'frontend/assets/images/vegetable/banner/11.jpg' %}" class="img-fluid blur-up lazyload"
+                                <img src="{% static 'frontend/assets/images/banners/creams.jpg' %}" class="img-fluid blur-up lazyload"
                                     alt="">
                                 <div class="home-detail p-top-left home-p-medium">
                                     <div>
-                                        <h4 class="text-yellow text-exo home-banner">Footwears</h4>
-                                        <h2 class="text-uppercase fw-normal mb-0 text-russo theme-color">Classic footwears to match your outfit</h2>
-                                        <h2 class="text-uppercase fw-normal text-title">Corporate Shoes</h2>
-                                        <p class="mb-3">Super Offer to 50% Off</p>
+                                        <h4 class="text-yellow text-exo home-banner">Body Lotions</h4>
+                                        <h2 class="text-uppercase fw-normal mb-0 text-russo theme-color">Skin Friendly Creams</h2>
+                                        <p class="mb-3">Super Offer of up to 50% Off</p>
                                         <button onclick="location.href = '{% url 'shop' %}';"
                                             class="btn btn-animation btn-md mend-auto">Shop Now <i
                                                 class="fa-solid fa-arrow-right icon"></i></button>
@@ -398,12 +396,12 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="banner-contain hover-effect">
-                                    <img src="{% static 'frontend/assets/images/vegetable/banner/10.jpg' %}" class="bg-img blur-up lazyload"
+                                    <img src="{% static 'frontend/assets/images/banners/bags.jpg' %}" class="bg-img blur-up lazyload"
                                         alt="">
                                     <div class="banner-details p-center-left p-4">
                                         <div>
                                             <h3 class="text-exo">50% offer</h3>
-                                            <h4 class="text-russo fw-normal theme-color mb-2">Fresh MEAT</h4>
+                                            <h4 class="text-russo fw-normal theme-color mb-2">On Luxury Bags</h4>
                                             <button onclick="location.href = '{% url 'shop' %}';"
                                                 class="btn btn-animation btn-sm mend-auto">Shop Now <i
                                                     class="fa-solid fa-arrow-right icon"></i></button>
@@ -432,14 +430,14 @@
                         <div class="row g-md-4 g-3">
                             <div class="col-xxl-8 col-xl-12 col-md-7">
                                 <div class="banner-contain hover-effect">
-                                    <img src="{% static 'frontend/assets/images/vegetable/banner/12.jpg' %}" class="bg-img blur-up lazyload"
+                                    <img src="{% static 'frontend/assets/images/banners/perfumes.jpg' %}" class="bg-img blur-up lazyload"
                                         alt="">
                                     <div class="banner-details p-center-left p-4">
                                         <div>
-                                            <h2 class="text-kaushan fw-normal theme-color">Get Ready To</h2>
+                                            <h2 class="text-kaushan fw-normal theme-color">Exotic Scents</h2>
                                             <h3 class="mt-2 mb-3">TAKE ON THE DAY!</h3>
-                                            <p class="text-content banner-text">In publishing and graphic design, Lorem
-                                                ipsum is a placeholder text commonly used to demonstrate.</p>
+<!--                                            <p class="text-content banner-text">In publishing and graphic design, Lorem-->
+<!--                                                ipsum is a placeholder text commonly used to demonstrate.</p>-->
                                             <button onclick="location.href = '{% url 'shop' %}';"
                                                 class="btn btn-animation btn-sm mend-auto">Shop Now <i
                                                     class="fa-solid fa-arrow-right icon"></i></button>
@@ -450,13 +448,13 @@
 
                             <div class="col-xxl-4 col-xl-12 col-md-5">
                                 <a href="{% url 'shop' %}" class="banner-contain hover-effect h-100">
-                                    <img src="{% static 'frontend/assets/images/vegetable/banner/13.jpg' %}" class="bg-img blur-up lazyload"
+                                    <img src="{% static 'frontend/assets/images/banners/earrings.jpg' %}" class="bg-img blur-up lazyload"
                                         alt="">
                                     <div class="banner-details p-center-left p-4 h-100">
                                         <div>
                                             <h2 class="text-kaushan fw-normal text-danger">20% Off</h2>
-                                            <h3 class="mt-2 mb-2 theme-color">SUMMRY</h3>
-                                            <h3 class="fw-normal product-name text-title">Product</h3>
+                                            <h3 class="mt-2 mb-2 theme-color">Ear Rings</h3>
+<!--                                            <h3 class="fw-normal product-name text-title"></h3>-->
                                         </div>
                                     </div>
                                 </a>
