--- a/templates/frontend/onboard-vendor.html
+++ b/templates/frontend/onboard-vendor.html
@@ -265,7 +265,7 @@
             <p>Go to your <a href="{% url 'vendor-dashboard-home' %}">Vendor Dashboard</a></p>
 
             {% else %}
-            <h2>Your vendor registration is being reviewed</h2>
+                <h2 class="text-info">Your vendor registration is being reviewed</h2>
             {% endif %}
         </div>
     </div>
