--- a/templates/frontend/signup.html
+++ b/templates/frontend/signup.html
@@ -121,28 +121,28 @@
                             </form>
                         </div>
 
-                        <div class="other-log-in">
-                            <h6>or</h6>
-                        </div>
+<!--                        <div class="other-log-in">-->
+<!--                            <h6>or</h6>-->
+<!--                        </div>-->
 
-                        <div class="log-in-button">
-                            <ul>
-                                <li>
-                                    <a href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
-                                        class="btn google-button w-100">
-                                        <img src="{% static 'frontend/assets/images/inner-page/google.png' %}" class="blur-up lazyload"
-                                            alt="">
-                                        Sign up with Google
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.facebook.com/" class="btn google-button w-100">
-                                        <img src="{% static 'frontend/assets/images/inner-page/facebook.png' %}" class="blur-up lazyload"
-                                            alt=""> Sign up with Facebook
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+<!--                        <div class="log-in-button">-->
+<!--                            <ul>-->
+<!--                                <li>-->
+<!--                                    <a href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"-->
+<!--                                        class="btn google-button w-100">-->
+<!--                                        <img src="{% static 'frontend/assets/images/inner-page/google.png' %}" class="blur-up lazyload"-->
+<!--                                            alt="">-->
+<!--                                        Sign up with Google-->
+<!--                                    </a>-->
+<!--                                </li>-->
+<!--                                <li>-->
+<!--                                    <a href="https://www.facebook.com/" class="btn google-button w-100">-->
+<!--                                        <img src="{% static 'frontend/assets/images/inner-page/facebook.png' %}" class="blur-up lazyload"-->
+<!--                                            alt=""> Sign up with Facebook-->
+<!--                                    </a>-->
+<!--                                </li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
 
                         <div class="other-log-in">
                             <h6></h6>
